fix confirm z-index

--- a/src/styles/confirm.scss
+++ b/src/styles/confirm.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 99999999;
 
   .shadow {
     width: 100%;
